--- a/rajeev/day 5/aboutme.html
+++ b/rajeev/day 5/aboutme.html
@@ -61,7 +61,7 @@
 
     </section>
     <footer>
-        <p>&copy; 2024 webpage-Nikita</p>
+        <p>&copy; 2024 webpage-Rajeev </p>
     </footer>
 </body>
 
